# mma

./: .env  .gitignore  CHALLENGES.md  Cargo.toml  LICENSE  README.md  run.sh  rust-toolchain.toml  rustfmt.toml  test_request.sh
.cargo/: config.toml
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
exchange/: Cargo.toml  README.md
exchange/benches/: order_benchmark.rs
exchange/src/: lib.rs
exchange/src/bybit/: book.rs  book_ws.rs  info.rs  market.rs  mod.rs  order.rs  order_ws.rs  private_ws.rs  public_ws.rs  utils.rs  wallet.rs
oms/: Cargo.toml  README.md
oms/src/: lib.rs  risk.rs
recorder/: Cargo.toml
recorder/src/: lib.rs
strategy/: Cargo.toml  README.md
strategy/src/simple/: mod.rs
