[workspace]
resolver = "2"

members = [
  "cli",
  "exchange",
  "oms",
  "strategy"
]

[workspace.package]
# If this version is changed, amend the edition set in `rustfmt.toml`.
edition = "2024"
# If this version is changed, amend the version set in `build.yml`.
rust-version = "1.93.0"
# Prevent publishing by accident.
publish = false
repository = "https://github.com/Eagle941/mma"
readme = "README.md"

[profile.release]
lto = "fat" # link time optimization using using whole-program analysis
codegen-units = 1 # optimization over all codebase ( better optimization, slower build )
panic = "abort"
opt-level = 3 # All optimisations
debug = true # Added for testing in release mode. To be removed for production

[workspace.dependencies]
crossbeam-channel = "0.5.15"
