[package]
name = "cli"
version = "0.0.1"
description = "A CLI tool to interact with mma through command line."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[[bin]]
name = "mma"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.3", features = ["derive"] }
crossbeam-channel.workspace = true
dotenvy = "0.15.7"
env_logger = "0.11.9"
exitcode = "1.1.2"
log.workspace = true
triple_buffer = "8.1.1"

exchange = { path = "../exchange" }
strategy = { path = "../strategy" }
oms = { path = "../oms" }
