[package]
name = "exchange"
version = "0.0.1"
description = "This package handles the connection with the crypto exchanges."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
attohttpc = { version = "0.30.1", features = ["json"] }
chrono = "0.4.43"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
rust-bybit = "0.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
triple_buffer = "8.1.1"
