[package]
name = "exchange"
version = "0.0.1"
description = "This package handles the connection with the crypto exchanges."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
attohttpc = { version = "0.30.1", features = ["json"] }
chrono = "0.4.43"
crossbeam-channel.workspace = true
hex = "0.4.3"
hmac = "0.12.1"
log.workspace = true
log-execution-time.workspace = true
rust-bybit = "0.2.0"
serde = "1.0.228"
serde_json = { version = "1.0.149", features = ["raw_value"] }
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
triple_buffer = "8.1.1"
